sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:8: error: ')' expected but ',' found.
  for (i <- getNombresValeurs()-2,0){
                                 ^AlgCocktailSort1:13: error: illegal start of simple expression
} 
^