sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  for (i <- 0 to getNombresValeurs()-2){
    if (plusPetit(i+1,i)==true){
      echange(i+1,i)
    }
  }
  for (i <- getNombresValeurs()-2,0){
    if if (plusPetit(i+1,i)==true){
      echange(i+1,i)
    }
  }
}